Inheritance on SuperPaper