@@ -1,30 +1,29 @@
 package com.booleanuk.core;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Library {
     List<Article> articles;
     List<Book> books;
     List<Newspaper> newspapers;
 
-    public void addToStock(Article item) {
-        this.articles.add(item);
-    }
+    public void addToStock(SuperPaper item) {
+        if (item instanceof Article)
+            this.articles.add((Article) item);
+        if (item instanceof  Book)
+            this.books.add((Book)item);
+        if (item instanceof  Newspaper)
+            this.newspapers.add((Newspaper) item);
 
-    public void addToStock(Book item) {
-        this.books.add(item);
-    }
-
-    public void addToStock(Newspaper item) {
-        this.newspapers.add(item);
     }
 
     // The following methods may contain code that you are unfamiliar with. The strange syntax of article -> something
     // is called a lambda expression (https://www.w3schools.com/java/java_lambda.asp)
-    public String checkInArticle(String title) {
-        List<Article> filtered = this.articles.stream()
-                .filter(article -> article.title.equals(title))
-                .toList();
+    public String checkInArticle(SuperPaper item) {
+        List<SuperPaper> filtered = getSuperPapers(item);
+        
 
         if (filtered.size() < 1) {
             return "item is not part of the library's collection";
@@ -33,63 +32,32 @@ public class Library {
         return filtered.get(0).checkIn();
     }
 
-    public String checkOutArticle(String title) {
-        List<Article> filtered = this.articles.stream()
-                .filter(article -> article.title.equals(title))
-                .toList();
+    public String checkOutArticle(SuperPaper item) {
+        List<SuperPaper> filtered = getSuperPapers(item);
 
         if (filtered.size() < 1) {
             return "item is not part of the library's collection";
         }
-
+        
         return filtered.get(0).checkOut();
     }
-
-    public String checkInBook(String title) {
-        List<Book> filtered = this.books.stream()
-                .filter(book -> book.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
+    private List<SuperPaper> getSuperPapers(SuperPaper item) {
+        List<SuperPaper> filtered = new ArrayList<>();
+        if (item instanceof Article) {
+            filtered = this.articles.stream()
+                    .filter(article -> article.title.equals(item.title))
+                    .collect(Collectors.toList());
         }
-
-        return filtered.get(0).checkIn();
-    }
-
-    public String checkOutBook(String title) {
-        List<Book> filtered = this.books.stream()
-                .filter(book -> book.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
+        if (item instanceof  Book) {
+            filtered = this.books.stream()
+                    .filter(book -> book.title.equals(item.title))
+                    .collect(Collectors.toList());
         }
-
-        return filtered.get(0).checkOut();
-    }
-
-    public String checkInNewspaper(String title) {
-        List<Newspaper> filtered = this.newspapers.stream()
-                .filter(newspaper -> newspaper.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
+        if (item instanceof  Newspaper) {
+            filtered = this.newspapers.stream()
+                    .filter(newspaper -> newspaper.title.equals(item.title))
+                    .collect(Collectors.toList());
         }
-
-        return filtered.get(0).checkIn();
-    }
-
-    public String checkOutNewspaper(String title) {
-        List<Newspaper> filtered = this.newspapers.stream()
-                .filter(newspaper -> newspaper.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkOut();
+        return filtered;
     }
 }
